force-app/main/default/objects/Route__c/fields/Route_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Route_Approved_by__c</fullName>
    <label>Route Approved by</label>
    <referenceTo>Operation_Manager__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>