force-app/main/default/objects/Route__c/fields/Route_Supervised_by__c.field-meta.xml
<CustomField>
    <fullName>Route_Supervised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Supervised by</label>
    <referenceTo>Supervisor__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>