force-app/main/default/objects/Route__c/fields/Vehicle_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Assigned</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>